# Treecatt

./: .gitignore  README.md  build_deb.sh  install.sh  pyproject.toml  pytest.ini  run_treecatt.sh  setup.py
scripts/: create_release.sh
src/treecatt/: __init__.py  constants.py  main.py
src/treecatt/features/: __init__.py  checksum.py  file.py  filter.py  git.py
tests/: test_treecatt.py
