[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treecatt"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
keywords = ["tree", "cat", "file", "directory", "cli", "tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "pytest>=9.0.2",
    "setuptools>=80.9.0",
    "stdeb>=0.11.0",
    "wheel>=0.45.1",
]

[project.scripts]
treecatt = "treecatt.main:main"

[project.urls]
Homepage = "https://github.com/votreusername/treecatt"
Issues = "https://github.com/votreusername/treecatt/issues"
Repository = "https://github.com/votreusername/treecatt.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
